# crunchyroll-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs
.github/: dependabot.yml
.github/scripts/: update_credentials.sh
.github/workflows/: ci.yml  fmt.yml  gh-pages.yml  lint.yml  publish.yml  rust-clippy.yml  update-credentials.yml
examples/: Cargo.toml  browse-genre.rs  middleware.rs  parse-input.rs  search-series.rs  stream-episode.rs
examples/browse/: Cargo.toml
examples/browse/src/: main.rs
examples/middleware/: Cargo.toml
examples/middleware/src/: main.rs
examples/parse-url/: Cargo.toml
examples/parse-url/src/: main.rs
examples/release-calendar/: Cargo.toml
examples/release-calendar/src/: main.rs
examples/search-series/: Cargo.toml
examples/search-series/src/: main.rs
examples/sso-login/: Cargo.toml
examples/sso-login/src/: main.rs
examples/stream-episode/: Cargo.toml
examples/stream-episode/src/: main.rs
internal/: Cargo.toml
internal/src/: lib.rs  util.rs
macros/: Cargo.toml
macros/src/: lib.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
proc-macros/: Cargo.toml
src/: account.rs  auth.rs  categories.rs  common.rs  crunchyroll.rs  devices.rs  error.rs  feed.rs  lib.rs  macros.rs  media.rs  media_collection.rs  middleware.rs  parse.rs  payment.rs  profile.rs  release_calendar.rs  search.rs  stream.rs  test.rs  utils.rs
src/internal/: macros.rs  middleware.rs  mod.rs  serde.rs  strict.rs  tower.rs
src/list/: crunchylist.rs  mod.rs  watch_history.rs  watchlist.rs
src/media/: common.rs  episode.rs  impl.rs  media.rs  media_collection.rs  media_impl.rs  mod.rs  movie.rs  movie_listing.rs  old_media.rs  season.rs  series.rs  stream.rs  streaming.rs  util.rs  video.rs  video_collection.rs  video_variants.rs
src/media/anime/: episode.rs  impl.rs  mod.rs  movie.rs  movie_listing.rs  season.rs  series.rs  shared.rs  util.rs
src/media/music/: artist.rs  concert.rs  impl.rs  mod.rs  music_video.rs  util.rs
src/media/shared/: image.rs
src/rating/: comment.rs  mod.rs  review.rs
tests/: _test_login.rs  test_account.rs  test_categories.rs  test_comments.rs  test_concert.rs  test_crunchylist.rs  test_device.rs  test_episode.rs  test_feed.rs  test_login.rs  test_movie.rs  test_movie_listing.rs  test_music_video.rs  test_parse.rs  test_payment.rs  test_profile.rs  test_rating.rs  test_release_calendar.rs  test_review.rs  test_search.rs  test_season.rs  test_series.rs  test_stream.rs  test_watch_history.rs  test_watchlist.rs
tests/utils/: macros.rs  mod.rs  session.rs  store.rs
