[package]
name = "crunchyroll-rs"
# increase version of internal package as well when updating
version = "0.14.0"
authors = ["Crunchy Labs Maintainers"]
edition = "2024"
rust-version = "1.85.0"
description = "Pure Rust implementation of the crunchyroll api."
readme = "README.md"
repository = "https://github.com/crunchy-labs/crunchyroll-rs"
documentation = "https://docs.rs/crunchyroll-rs"
license = "MIT OR Apache-2.0"
keywords = ["crunchyroll", "anime", "downloader"]
categories = ["api-bindings"]

[features]
default = ["parse"]

# Add functionality to parse Crunchyroll urls.
parse = ["dep:regex"]
# Add the ability to specify custom middleware.
tower = ["dep:tower-service"]
# Add various stabilizations as Crunchyroll delivers wrong api results in some cases.
experimental-stabilizations = []

# Internal! Do not use it outside of testing
__test_strict = []

[dependencies]
chrono = { version = ">=0.4.35", features = ["serde"] }
dash-mpd = { version = "0.18", default-features = false }
futures-util = { version = "0.3", features = ["std"], default-features = false }
jsonwebtoken = { version = "9.3", default-features = false }
# the patch version number is necessary for the 'reqwest' and 'rustls' dependencies to prevent incompatability errors
# (https://github.com/seanmonstar/reqwest/issues/1837)
reqwest = { version = "0.12.19", features = ["cookies", "json", "multipart", "rustls-tls"] }
rustls = { version = "0.23.4", default-features = false, features = ["std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
smart-default = "0.7"
tokio = { version = "1.45", features = ["sync"] }
uuid = { version = "1.17", features = ["v4"] }
webpki-roots = "1.0"

crunchyroll-rs-internal = { version = "0.14.0", path = "internal" }

regex = { version = "1.11", default-features = false, features = ["std"], optional = true }
tower-service = { version = "0.3", optional = true }

[dev-dependencies]
anyhow = "1.0"
rand = "0.9"
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread"] }

[workspace]
members = ["internal"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
