[package]
name = "crunchyroll-rs-internal"
version = "0.12.0"
authors = ["Crunchy Labs Maintainers"]
edition = "2021"
description = "Internal crate for crunchyroll-rs. Do not use."
repository = "https://github.com/crunchy-labs/crunchyroll-rs"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
