[package]
name = "crunchyroll-rs-internal"
description = "Internal crate for crunchyroll-rs. Do not use directly."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.23"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
